# fractran-lib-rs

./: Cargo.toml  README.md  README.org  crates-io-readme.md
src/: frac.rs  lib.rs  math.rs  primebasis.rs  program.rs
