[package]
name = "fractran"
version = "0.1.0"
authors = ["Nicholas Miklaucic <nicholas.miklaucic@gmail.com>"]
edition = "2018"
description = "A library to execute Fractran programs"
keywords = ["esolang"]
categories = ["mathematics"]
repository = "https://github.com/nicholas-miklaucic/fractran-lib-rs"
homepage = "https://github.com/nicholas-miklaucic/fractran-lib-rs"
license = "MIT OR Apache-2.0"
readme = "crates-io-readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
lazy_static = "1.4.0"
itertools = "0.9"
